# AUIC3DRecon

./: MergePointCloud.py  README.md  d435.rviz  oldpkg.text
Model/: 11.SLDPRT  44.SLDPRT  AssemblyMount.SLDASM  DrawingDoc.pptx  RealSense_D435.SLDPRT  camera mount-Static 1.CWR  camera mount-Static 1.MFC  camera mount-Static 1.gsz  camera mount-Static 2.MFC  camera mount-Static 2.gsz  camera mount.SLDPRT  camera mount.STL  servoholder.SLDPRT  servoholder.STL  ~$camera mount.SLDPRT
arduinoCode/: arduinoCode.ino
install/: local_setup.sh  setup.sh
install/point_cloud_blender/share/point_cloud_blender/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/arduino_serial/: package.xml  setup.py
src/arduino_serial/arduino_serial/: o3dpointCloud.py
src/arduino_serial_com/: package.xml  setup.cfg  setup.py
src/arduino_serial_com/arduino_serial_com/: arduinoWriter.py
src/image_stitcher/: package.xml  setup.py
src/image_stitcher/image_stitcher/: stitch_image.py
src/point_cloud_blend_python/: package.xml  setup.cfg  setup.py
src/point_cloud_blend_python/point_cloud_blend_python/: arduinoWriter.py  rotationTester.py
src/point_cloud_blender/: CMakeLists.txt  package.xml
src/point_cloud_blender/src/: arduinoWriter.cpp  icpBlend.cpp  mergeNode.cpp  pointCloudBlender.cpp  sad.cpp
src/point_cloud_merge/: package.xml  setup.cfg  setup.py
src/point_cloud_merge/point_cloud_merge/: MergePointCloud.py
