<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>point_cloud_blender</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="edriclay2002@outlook.com">edric</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>

  <build_depend>boost</build_depend>
  <exec_depend>boost</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
